--- a/分布式锁、并发竞争、双写一致性.md
+++ b/分布式锁、并发竞争、双写一致性.md
@@ -4,35 +4,11 @@
 
 之前跟你们说的，**限流**，**降级**，是不是在双十一又应验了，下单接口其实没挂，牺牲部分用户体验，保住服务器，你多点几下是可以成功的，等流量高峰过去了，所有的用户全部都恢复正常访问，服务器也没啥事。
 
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g8te6fi2zuj30h80uc79b.jpg)
-
-去年退款接口被打崩了，今年阿里明显也聪明了很多。
-
-![](https://tva1.sinaimg.cn/large/006y8mN6ly1g8tebz0g59j30h20kagqb.jpg)
-
 ## 正文
-
-上几期吊打系列我们提到了Redis的很多知识，还没看的小伙伴可以回顾一下 
-
-- **[《吊打面试官》系列-Redis基础](https://juejin.im/post/5db66ed9e51d452a2f15d833)**
-- **[《吊打面试官》系列-缓存雪崩、击穿、穿透](https://juejin.im/post/5dbef8306fb9a0203f6fa3e2)**
-- **[《吊打面试官》系列-Redis哨兵、持久化、主从、手撕LRU](https://juejin.im/post/5dc3a9fbf265da4d3c072eab)**
 
 那提到**Redis**我相信各位在面试，或者实际开发过程中对基本类型的使用场景，并发竞争带来的问题，以及缓存数据库双写入一致性的问题等，我们有请下一位受害者。
 
-## 面试开始
-
-> 一个大腹便便，穿着格子衬衣的中年男子，拿着一个满是划痕的mac向你走来，看着快秃顶的头发，心想着肯定是尼玛顶级架构师吧！但是我们腹有诗书气自华，虚都不虚。（这不是第一篇文章的面试官么？）
-
-![](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1573415109799&di=10794a9a56bb2985e61410c66725df92&imgtype=0&src=http%3A%2F%2Fn.sinaimg.cn%2Ftech%2Fcrawl%2F300%2Fw550h550%2F20190910%2F26de-iekuaqt2051968.jpg)
-
-### 小伙子，你还记得我在第一章里面问过你，Redis有几种基础数据类型么？
-
-嗯嗯，帅气的面试官，我肯定记得，没齿难忘！！！
-
-我特么谢谢你，都四面了还不给Offer！
-
-![](https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=2924189579,2302654360&fm=26&gp=0.jpg)
+### Redis有几种基础数据类型么？
 
 ### 那你能说一下他们的特性，还有分别的使用场景么？
 
@@ -45,8 +21,6 @@
 但是真实的开发环境中，很多仔可能会把很多比较复杂的结构也统一转成**String**去存储使用，比如有的仔他就喜欢把对象或者**List**转换为**JSONString**进行存储，拿出来再反序列话啥的。
 
 我在这里就不讨论这样做的对错了，但是我还是希望大家能在最合适的场景使用最合适的数据结构，对象找不到最合适的但是类型可以选最合适的嘛，之后别人接手你的代码一看这么**规范**，诶这小伙子**有点东西**呀，看到你啥都是用的**String**，**垃圾！**
-
-![](https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=454498675,4139436609&fm=26&gp=0.jpg)
 
 好了这些都是题外话了，道理还是希望大家记在心里，习惯成自然嘛，小习惯成就你。
 
