--- a/系统设计.md
+++ b/系统设计.md
@@ -53,3 +53,5 @@ CREATE TABLE 'order_product_info'(
     'goods_num' int(10) NOT NULL COMMIT '下单数量'
 )
 ```
+### redis在其中的作用
+秒杀本质上就是对库存的高并发操作，业务场景就是一个读多写少的场景，先判断库存，符合条件再下单，不符合了直接return false，不走后续的流程减少服务器的压力。
